[project]
name = "crypto-signal-broadcast"
version = "0.1.0"
description = "Cryptocurrency signal broadcast system using OKX data and Discord bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "krex>=0.12.2",
    "python-dotenv>=1.0.0",
    "discord.py>=2.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "aiohttp>=3.8.0",
    "ccxt>=4.4.95",
    "polars>=0.20.0",
    "tqdm>=4.67.1",
]
